# open_manipulator_x

./: README.md  open_manipulator_x.repos
open_manipulator_x_description/: CMakeLists.txt  package.xml
open_manipulator_x_description/urdf/: open_manipulator_x.urdf.xacro  open_manipulator_x.xacro  open_manipulator_x_macro.urdf.xacro
open_manipulator_x_description_rosbot/: CMakeLists.txt  package.xml
open_manipulator_x_description_rosbot/urdf/: open_manipulator_x.xacro
open_manipulator_x_hardware/: CMakeLists.txt  open_manipulator_x_hardware.xml  package.xml
open_manipulator_x_hardware/config/: example_manipulator_controller.yaml  manipulator_controller.yaml
open_manipulator_x_hardware/include/open_manipulator_x_hardware/: dynamixel.h  dynamixel_sdk_wrapper.hpp  open_manipulator_x_system.hpp  opencr.hpp  opencr_control_table.hpp  opencr_definitions.hpp  visibility_control.h
open_manipulator_x_hardware/src/: dynamixel.cpp  dynamixel_sdk_wrapper.cpp  open_manipulator_x_system.cpp  opencr.cpp
open_manipulator_x_joy/: package.xml  setup.cfg  setup.py
open_manipulator_x_joy/open_manipulator_x_joy/: joy_servo.py
open_manipulator_x_rosbot_xl_moveit/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulator_x_rosbot_xl_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  rosbot_xl.srdf  rosbot_xl.urdf.xacro  servo.yaml
open_manipulator_x_rosbot_xl_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
rosbot_xl_manipulation_bringup/: package.xml
rosbot_xl_manipulation_bringup/launch/: bringup.launch.py
rosbot_xl_manipulation_description/: package.xml
rosbot_xl_manipulation_description/urdf/: rosbot_xl_manipulation.urdf.xacro
rosbot_xl_manipulation_gazebo/: package.xml
rosbot_xl_manipulation_gazebo/launch/: simulation.launch.py
rosbot_xl_manipulation_hardware/: CMakeLists.txt  package.xml
rosbot_xl_manipulation_hardware/config/: mecanum_drive_manipulator_controller.yaml
rosbot_xl_manipulation_hardware/launch/: controller.launch.py
rosbot_xl_manipulation_moveit/: CMakeLists.txt  package.xml
rosbot_xl_manipulation_moveit/config/: joint_limits.yaml  ompl_planning.yaml  ros2_controllers.yaml  rosbot_xl.ros2_control.xacro
rosbot_xl_manipulation_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
rosbot_xl_manipulation_moveit/rosbot_xl_manipulation_moveit/: joy_servo_node.py
